# SmartHire-Showcase

./: .windsurfrules  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: quality-gate.yml
adr/: 0014_money_basis_points.md  0019_payment_idempotency.md  001_multi_tenant_architecture.md  0021_white_label.md  0023_frontend_backend_contract.md  0023_pii_encryption.md  0025_feature_flags.md  0025_postgresql_partitioning.md  0028_zero_downtime_deployments.md  0030_multitenancy_hardening.md  0032_service_layer_enforcement.md  005_module_federation.md  README.md
code/: base_module.py  billing_lifecycle.py  billing_state_machine.py  helm_values.yaml  money.py  rls_migration.sql  safe_exception_handler.py  service_layer_example.py  tenant_query_builder.py  webhook_validator.py
docs/: dashboard.md  di_container.md  infrastructure.md  module_federation.md
