[project]
name = "smarthire-showcase"
version = "1.0.0"
description = "SmartHire architecture patterns showcase"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "dependency-injector>=4.49.0",
    "aiogram>=3.0.0",
    "fastapi>=0.135.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "bandit>=1.7.0",
    "hypothesis>=6.100.0",
]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python-version = "3.12"
strict = true
ignore-missing-imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["code"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
